--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div id="ac" class="button">AC</div>
             <div id="posneg" class="button">+/-</div>
-            <div id="mod" class="button">%</div>
+            <div id="mod" class="button">hi</div>
             <div id = "divide" class="button">/</div>
         </div>
         <div class="row">
